crates/harness-testkit/tests/snapshots/pty_e2e__pty_continue_live_events.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&events_screen,\n&[\"Event log\", \"Event details\", \"recorded\", \"selected seq\"], &events_visual,)"
---
Event log: true
Event details: true
recorded: true
selected seq: true
focus_marker: Event log
focus_pixels_blake3: 76a5340308c5176474bae2cc27e01585f422823e382e110870c217c0af2f4613
focus_region_cells: row=3, col=5, height=6, width=24
image: pty_continue_live_events.png
size_px: 2560x1440
