crates/harness-testkit/tests/snapshots/pty_e2e__pty_continue_live_help.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&help_screen,\n&[\"Keyboard Shortcuts:\", \"Live surfaces:\", \"Toggle details drawer\",\n\"Open Events surface\", \"Open Help surface\",], &help_visual,)"
---
Keyboard Shortcuts:: true
Live surfaces:: true
Toggle details drawer: true
Open Events surface: true
Open Help surface: true
focus_marker: Keyboard Shortcuts:
focus_pixels_blake3: fe29070175cf69952ce425ec9ed1aa24089ffa5bebbd5363f2b67138aee7b5a6
focus_region_cells: row=4, col=5, height=10, width=26
image: pty_continue_live_help.png
size_px: 2560x1440
