crates/harness-testkit/tests/snapshots/pty_e2e__pty_continue_quiescent_session.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&continued_screen,\n&[&format!(\"Continued · run {run_id}\"), \"ready for next turn\",\nLIVE_OPERATOR_EMPTY_MARKER, \"Enter send\",], &continued_visual,)"
---
Continued · run run_resume_quiescent: true
ready for next turn: true
Context: true
Enter send: true
focus_marker: Continued · run
focus_pixels_blake3: 02ffbc9151f41a65df5a390c5852116fe5da14b91a0a86519d1816938e3f8afa
focus_region_cells: row=1, col=120, height=1, width=18
image: pty_continue_quiescent_session.png
manifest_json: pty-manifests/continue_session/manifest.json
manifest_jsonl: pty-manifests/continue_session/manifest.jsonl
size_px: 2560x1440
