crates/harness-testkit/tests/snapshots/pty_e2e__pty_diff_tab.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 151
expression: "checkpoint_visual_snapshot(&diff_checkpoint,\n&[\"@@ -1,3 +1,3 @@\", \"-beta\", \"+BETA\", \"RunFinished\"], &diff_visual)"
---
@@ -1,3 +1,3 @@: true
-beta: true
+BETA: true
RunFinished: true
focus_marker: @@ -1,3 +1,3 @@
focus_pixels_blake3: 04a8cfb89a69f5115b558d2f9a83901dbe5584742821bbc3d122543633a19c8d
focus_region_cells: row=5, col=33, height=10, width=47
image: pty_diff_tab.png
size_px: 2560x1440
