crates/harness-testkit/tests/snapshots/pty_e2e__pty_interactive_prompt_stream.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&prompt_checkpoint,\nLIVE_STATE_FIXTURES.draft.snapshot_markers, &prompt_visual)"
---
Hello world: true
Ctrl+p commands: true
focus_marker: Hello world
focus_render_state_blake3: 966e90445af204e8e8de09c9aa6127d311eb5288c3b2f3c83c5a735ac0f2b40d
focus_region_cells: row=3, col=5, height=6, width=28
image: pty_interactive_prompt_stream.png
manifest_json: pty-manifests/live_shell/manifest.json
manifest_jsonl: pty-manifests/live_shell/manifest.jsonl
size_px: 1280x720
