crates/harness-testkit/tests/snapshots/pty_e2e__pty_interactive_type_first_startup.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&startup_checkpoint,\nLIVE_STATE_FIXTURES.draft.draft_snapshot_markers, &startup_visual)"
---
Hello from PTY: true
Ctrl+p open: true
focus_marker: Hello from PTY
focus_render_state_blake3: b80c32a7f88b5158d2ee214095873faa3de220343aaa2b8db66cfae6e71ddf24
focus_region_cells: row=11, col=3, height=4, width=24
image: pty_interactive_type_first_startup.png
manifest_json: pty-manifests/live_shell/manifest.json
manifest_jsonl: pty-manifests/live_shell/manifest.jsonl
size_px: 1280x720
