crates/harness-testkit/tests/snapshots/pty_e2e__pty_mock_lifecycle_continue_history.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 438
expression: "checkpoint_visual_snapshot(&history_screen,\n&[STARTUP_CONTINUE_HISTORY_MARKER, STARTUP_CONTINUE_SCOPE_MARKER, \"continue ready\",],\n&history_visual,)"
---
Continue session: true
Interactive histories: true
continue ready: true
focus_marker: continue ready
focus_pixels_blake3: 38a0d86364626fc93fd227dcae0a2982053118374d6e167dbab3e7092593f8fc
focus_region_cells: row=21, col=60, height=3, width=28
image: pty_mock_lifecycle_continue_history.png
size_px: 2560x1440
